# cfc-collision

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml  index.md
.github/workflows/: github-action-ci-basic.yml  github-action-ci-clang-tidy.yml
CMakeModules/: FindStaticAnalysis.cmake
_layouts/: default.html
doc/: Doxyfile  doc.md
include/: DistanceSolver-inl.h  DistanceSolver.h
include/cfc/: ContinuousDistanceCFC-inl.h  ContinuousDistanceCFC.h  ContinuousDistanceLeastSquares-inl.h  ContinuousDistanceLeastSquares.h  DistanceCFC-inl.h  DistanceCFC.h  DistanceFixedPoint-inl.h  DistanceFixedPoint.h  DistanceLeastSquares-inl.h  DistanceLeastSquares.h  DistanceLeastSquaresCommonNormal-inl.h  DistanceLeastSquaresCommonNormal.h
include/common_normal/: DistanceCommonNormal-inl.h  DistanceCommonNormal.h  DistanceCommonNormalFixedPoint-inl.h  DistanceCommonNormalFixedPoint.h  DistanceCommonNormalLeastSquares-inl.h  DistanceCommonNormalLeastSquares.h
include/fcl_interface/: DistanceFCL-inl.h  DistanceFCL.h
include/geometry/: ClosedFormContactSpace-inl.h  ClosedFormContactSpace.h  Ellipsoid.h  GeometryInfo.h  PolyEllipsoid.h  SuperQuadrics.h
include/implicit/: DistanceImplicit-inl.h  DistanceImplicit.h
include/util/: FCLUtils-inl.h  FCLUtils.h  MathUtils-inl.h  MathUtils.h  MeshGenerator-inl.h  MeshGenerator.h
resources/doc/v0.1.0/: annotated.html  annotated_dup.js  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_586ad3c2f85d776b984733890d824e3e.html  dir_586ad3c2f85d776b984733890d824e3e.js  dir_65350fb08a5c39b03bbf54266620f84c.html  dir_65350fb08a5c39b03bbf54266620f84c.js  dir_663a607cd7b59b5c317bc9e69a8efa79.html  dir_663a607cd7b59b5c317bc9e69a8efa79.js  dir_7950f27e1a67f839c988c5231775f198.html  dir_7950f27e1a67f839c988c5231775f198.js  dir_7c5b3909b0e1ddfac16f9a0c9b05a3a2.html  dir_7c5b3909b0e1ddfac16f9a0c9b05a3a2.js  dir_8c297fbdebba2c452da0af048529a903.html  dir_8c297fbdebba2c452da0af048529a903.js  dir_cac21311fa223bf4e936802c78bf215f.html  dir_cac21311fa223bf4e936802c78bf215f.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_da2deff08de8a097fdeb452336fc020b.html  dir_da2deff08de8a097fdeb452336fc020b.js  dir_f8c0248c31f636de7f56d8cf7605c8e4.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_f.html  functions_func.html  functions_g.html  functions_i.html  functions_j.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  (+21 more)
resources/doc/v0.1.0/d0/d50/: classcollision__common__normal_1_1DistanceCommonNormalFixedPoint-members.html
resources/doc/v0.1.0/d0/d5b/: classcfc_1_1Ellipsoid.html  classcfc_1_1Ellipsoid.js
resources/doc/v0.1.0/d0/d61/: structcfc_1_1ParametricPoints.html  structcfc_1_1ParametricPoints.js
resources/doc/v0.1.0/d0/d7b/: DistanceImplicit_8h_source.html
resources/doc/v0.1.0/d0/d8b/: DistanceCFC-inl_8h_source.html
resources/doc/v0.1.0/d0/d9c/: FCLUtils-inl_8h_source.html
resources/doc/v0.1.0/d0/db0/: classcfc_1_1collision__cfc_1_1DistanceFixedPoint-members.html
resources/doc/v0.1.0/d0/dde/: FCLUtils_8h_source.html
resources/doc/v0.1.0/d1/d13/: DistanceQueryUtils-inl_8h_source.html
resources/doc/v0.1.0/d1/d26/: DistanceCommonNormalFixedPoint_8h_source.html
resources/doc/v0.1.0/d1/d2e/: classcfc_1_1collision__cfc_1_1CostDistanceLeastSquares-members.html
resources/doc/v0.1.0/d1/d42/: classcollision__common__normal_1_1DistanceCommonNormal.html  classcollision__common__normal_1_1DistanceCommonNormal.js
resources/doc/v0.1.0/d1/d56/: classcfc_1_1collision__cfc_1_1DistanceLeastSquaresCommonNormal.html  classcfc_1_1collision__cfc_1_1DistanceLeastSquaresCommonNormal.js
resources/doc/v0.1.0/d1/d8d/: MeshGenerator_8h_source.html
resources/doc/v0.1.0/d1/da7/: SuperQuadrics_8h_source.html
resources/doc/v0.1.0/d1/dc0/: BenchmarkDistance-inl_8h_source.html
resources/doc/v0.1.0/d1/dc1/: DistanceCommonNormalLeastSquares_8h_source.html
resources/doc/v0.1.0/d1/ddf/: classcfc_1_1collision__cfc_1_1DistanceLeastSquaresCommonNormal-members.html
resources/doc/v0.1.0/d2/d1d/: classcfc_1_1collision__cfc_1_1ContinuousDistanceCFC.html  classcfc_1_1collision__cfc_1_1ContinuousDistanceCFC.js
resources/doc/v0.1.0/d2/d2b/: ContinuousDistanceLeastSquares_8h_source.html
resources/doc/v0.1.0/d2/d36/: DistanceFCL_8h_source.html
resources/doc/v0.1.0/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+21 more)
script/: install-dependencies.sh  start-docker.sh
test/: CMakeLists.txt  TestContinuousDistanceCFCLeastSquares.cpp  TestDistanceCFCFixedPoint.cpp  TestDistanceCFCLeastSquares.cpp  TestDistanceCFCLeastSquaresCommonNormal.cpp  TestDistanceCommonNormalFixedPoint.cpp  TestDistanceCommonNormalLeastSquares.cpp  TestDistanceImplicit.cpp  TestESDistance3D.cpp
test/benchmark/: BenchmarkContinuousDistance-inl.h  BenchmarkContinuousDistance.h  BenchmarkDistance-inl.h  BenchmarkDistance.h  BenchmarkDistanceContinuous.cpp  BenchmarkDistanceStatic.cpp  CMakeLists.txt  config.h.in
test/util/: DistanceQueryUtils-inl.h  DistanceQueryUtils.h  Utils-inl.h  Utils.h
test/util/src/: CMakeLists.txt  DistanceQueryUtils.cpp  Utils.cpp
(+115 files in other folders)
